fix: progress-bar horizontal width 2023-06-20 19:14

--- a/horizontal/horizontal.html
+++ b/horizontal/horizontal.html
@@ -7,8 +7,7 @@
 <body>
     <div class="progress-external">
         <div class="progress-internal" style="width:70%">
-        <div class="progress-fill">
-        </div>
+            <div class="progress-fill"></div>
         </div>
     </div>
 </body>
