fix: progress-bar vertical 2023-06-20 19:18

--- a/vertical/vertical.html
+++ b/vertical/vertical.html
@@ -2,11 +2,11 @@
 <html lang="pt-BR">
 <head>
     <title>posicionamento</title>
-    <link rel="stylesheet" href="horizontal.css">
+    <link rel="stylesheet" href="vertical.css">
 </head>
 <body>
     <div class="progress-external">
-        <div class="progress-internal" style="width:70%">
+        <div class="progress-internal" style="height:80%">
             <div class="progress-fill"></div>
         </div>
       </div>
